fixed bad overflows, components not scrolling

--- a/src/pages/Order.css
+++ b/src/pages/Order.css
@@ -1,13 +1,15 @@
 
 .order {
     width: 100%;
+    display: flex;
+    flex-direction: column;
     height: 100%;
     color: white;
 }
 
 .order_content {
     display: flex;
-    height: calc(100% - 90px);
+    flex: 1;
     flex-direction: column;
     justify-content: space-between;
     padding: 5px 10px;
@@ -92,7 +94,11 @@
 
 .order_meals {
     display: flex;
+    box-sizing: border-box;
+    max-height: 100%;
     flex-direction: column;
+    overflow-y: scroll;
+    margin-bottom: 10px;
 }
 
 .order_meals_divider {
