--- a/src/pages/Print.css
+++ b/src/pages/Print.css
@@ -5,6 +5,8 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 5px;
+    max-height: 100%;
+    overflow-y: scroll;
 }
 
 .print_button {
@@ -21,11 +23,11 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: 20px 0
+    margin: 30px 0
 }
 
 .print_header_company {
-    font-size: 24px;
+    font-size: 28px;
 }
 
 .print_header_details {
@@ -42,7 +44,7 @@
     margin-top: 5px;
     box-sizing: border-box;
     border: 1px solid white;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .print_order {
@@ -109,9 +111,19 @@
 
 .print_order_summary {
     width: 100%;
-    font-size: 20px;
+    font-size: 22px;
     display: flex;
     justify-content: space-around;
+    margin-bottom: 20px;
+}
+
+.print_order_footer {
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 .border_color {
